# AML_Policy_FAQ_BOT

./: .db.env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh  start_worker.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  infrastructure-frontend.yml  infrastructure.yml
app/: alembic.ini  main.py
app/api/v1/: rag_endpoints.py
app/celery_backend/app/: celery_app.py  crud.py  database.py  models.py  tasks.py
app/core/: config.py
app/embeddings/: embedder.py  vecstore.py
app/middleware/: session_middleware.py
app/migrations/: env.py
app/migrations/versions/: f0435ed84eed_auto_migration.py
app/retrieval/: qa_chain.py
app/services/: langchain_services.py
app/utils/: read_files.py
backend/: handler.py  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/agents/: __init__.py  rag_agent.py
backend/app/api/v1/: endpoints.py
backend/app/core/: config.py
backend/app/embeddings/: __init__.py  embedder.py  vecstore.py
backend/app/utils/: __init__.py  file_parser.py
docs/: API_GATEWAY_LAMBDA_WORKFLOW.md
frontend/: .env.example  index.html
frontend/src/: App.css  App.jsx  index.css
infrastructure/backend/: api_gateway.tf  backend.hcl  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
infrastructure/bootstrap/: .terraform.lock.hcl  README.md  main.tf
infrastructure/frontend/: backend.hcl  cloudfront.tf  main.tf  outputs.tf  s3.tf  variables.tf
vector_store/1c1f7a62-b076-480e-a12d-8b5bfa338712/: chroma.sqlite3
vector_store/22fe5d85-5be7-49c7-a3fb-4d8f6696d955/: chroma.sqlite3
vector_store/a89e005e-97d6-4880-beb4-9af3c833bafc/: chroma.sqlite3
vector_store/b645a485-404f-41c9-b539-2091522f31d9/: chroma.sqlite3
