[project]
name = "aml-policy-faq-bot-backend"
version = "0.1.0"
description = "AML Policy FAQ Bot Backend - AWS Lambda deployment"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & Lambda
    "fastapi>=0.124.2",
    "mangum>=0.18.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    
    # Pydantic
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    
    # LangChain & LangGraph
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-chroma>=1.0.0",
    "langgraph>=1.0.4",
    
    # AWS
    "boto3>=1.35.0",
    
    # Document Processing
    "pypdf>=6.4.1",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "uvicorn[standard]>=0.38.0",
]
