[project]
name = "aml-policy-faq-bot-backend"
version = "0.1.0"
description = "AML Policy FAQ Bot Backend - AWS Lambda deployment"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & Lambda
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # LangChain & LangGraph (latest versions)
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-community>=0.3.14",
    "langchain-text-splitters>=0.3.4",
    "langchain-nvidia-ai-endpoints>=0.3.8",
    "langchain-qdrant>=1.1.0",
    "langgraph>=0.2.60",
    
    # Qdrant (lightweight vector store client)
    "qdrant-client>=1.16.2",
    
    # AWS
    "boto3>=1.35.0",
    
    # Document Processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "uvicorn[standard]>=0.34.0",
]
